--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "firebase": "^5.4.1",
+    "slugify": "^1.3.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-slugify": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
